@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-  <email>tester@gentoo.org</email>
-</maintainer>
+	<herd>sound</herd>
+	<use>
+		<flag name='utils'>Install command-line utilities</flag>
+	</use>
 </pkgmetadata>
