@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libmp4v2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.46 2009/06/10 09:31:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.47 2009/07/10 09:54:30 ssuominen Exp $
+
+*libmp4v2-1.9.0 (10 Jul 2009)
+
+  10 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
+  +libmp4v2-1.9.0.ebuild, metadata.xml:
+  Version bump. New upstream.
 
   10 Jun 2009; Alexis Ballier <aballier@gentoo.org>
   libmp4v2-1.5.0.1-r2.ebuild,
